--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@apollo/client": "^3.5.10",
     "graphql": "^16.3.0",
     "next": "12.1.5",
+    "next-i18next": "^11.0.0",
     "next-with-apollo": "^5.3.0",
     "react": "17.0.2",
     "react-dom": "17.0.2"
